cmake_minimum_required(VERSION 2.8)

SET(GLFW_INC "" CACHE STRING "Path to glfw include directory")
SET(GLFW_LIB "" CACHE STRING "Path to glfw lib directory")
SET(GLM_INC "" CACHE STRING "Path to glm include directory")
SET(VK_SDK "" CACHE STRING "Path to LunarG Vulkan SDK directory")

# Prepare project build
project(VKExampleRTX)

add_executable(${PROJECT_NAME} "main.cpp")

set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)

include_directories(${GLFW_INC})
include_directories(${GLM_INC})
include_directories(${VK_SDK}/Include)

target_link_libraries(
    ${PROJECT_NAME}
        PRIVATE
            "${VK_SDK}/Lib/vulkan-1.lib"
            "${GLFW_LIB}/libglfw3.a"
)

# Compile shaders
function(compile_shader FILE)
    configure_file(${CMAKE_SOURCE_DIR}/${FILE} ${CMAKE_BINARY_DIR}/${FILE})
    exec_program(${VK_SDK}/Bin/glslc.exe ARGS ${CMAKE_BINARY_DIR}/${FILE} -o ${CMAKE_BINARY_DIR}/${FILE}.spv RETURN_VALUE ret)
    file(REMOVE ${CMAKE_BINARY_DIR}/${FILE})
    if(NOT ret EQUAL "0")
        message(FATAL_ERROR "Shader compilation failed: " ${FILE})
    endif()
endfunction(compile_shader)

compile_shader(main.rgen)
compile_shader(main.rmiss)
compile_shader(main.rchit)
